; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-libdlpi.c_pcap_cleanup_libdlpi.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-libdlpi.c_pcap_cleanup_libdlpi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.pcap_dlpi* }
%struct.pcap_dlpi = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @pcap_cleanup_libdlpi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcap_cleanup_libdlpi(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.pcap_dlpi*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %6 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %5, align 8
  store %struct.pcap_dlpi* %6, %struct.pcap_dlpi** %3, align 8
  %7 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %3, align 8
  %8 = getelementptr inbounds %struct.pcap_dlpi, %struct.pcap_dlpi* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %3, align 8
  %13 = getelementptr inbounds %struct.pcap_dlpi, %struct.pcap_dlpi* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @dlpi_close(i32* %14)
  %16 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %3, align 8
  %17 = getelementptr inbounds %struct.pcap_dlpi, %struct.pcap_dlpi* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32 -1, i32* %19, align 8
  br label %20

20:                                               ; preds = %11, %1
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %22 = call i32 @pcap_cleanup_live_common(%struct.TYPE_4__* %21)
  ret void
}

declare dso_local i32 @dlpi_close(i32*) #1

declare dso_local i32 @pcap_cleanup_live_common(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
